syntax = "proto3";

package com.wjq.netty.protobuffer;

option java_package ="com.wjq.netty.protobuffer";
option java_outer_classname = "HelloServiceJ";
option java_multiple_files = true;



service HelloService{

    rpc SayHello(HelloRequest ) returns (HelloReponse){}
}

message HelloRequest{
    string greet = 1;
}

message HelloReponse{
    string reply = 1;
}





